--- a/src/main/resources/assets/pandoras_creatures/lang/el_gr.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/el_gr.json
@@ -1,64 +1,65 @@
-// Notes for translators, please read before starting.
-//
-// If you read this thank you for considering localising Pandoras Creatures.
-// Before you start consider messaging me (mod author) or one of my Discord moderators,
-// so you can get the Translator Role and have acces to the newest lang file.
-// This lang file will often have localisations for the next version of the mod,
-// that contains content that has not been released yet.
-//
-// When the localisation file is done send it to me, preferably in the discord channel made
-// for it, or by sending me a direct message.
-//
-// If you want a name other then your Discord name to be inside the credits, let me know.
-//
-// 					  <#########> Localising Tools <#########>
-//
-// By putting \n in the text the mod will split the text at that position, when spliting text
-// keep in mind that you have to add a color code again, if you used one in the line before
-// (see color codes bellow), as its a new line and the color will reset itself to default.
-//
-// The following color codes can be added to the start of text to color it:
-//
-// #c0 Black
-// #c1 Dark Blue
-// #c2 Dark Green
-// #c3 Dark Aqua
-// #c4 Dark Red
-// #c5 Dark Purple
-// #c6 Gold
-// #c7 Gray
-// #c8 Dark Gray
-// #c9 Blue
-// #ca Green
-// #cb Aqua
-// #cc Red
-// #cd Light Purple
-// #ce Yellow
-// #cf White
-//
-// The following color codes can be added to the start of text to apply some effects:
-//
-// #cl Bold
-// #cm Strikethrough
-// #cn Underline
-// #co Italic
-// #cr Reset the default color
-//
-// Feel free to add or remove new lines, in order to make the text look good in the language youre working on.
-// You should use a text editor that has JSON formating in order to avoid invalid files.
-// The text %s will be replace with text. Example: "Author: %s" could become "Author: andrew0030".  
-// The text %d will be replace with a number. Example: "Radius: %d*%d*%d" could become "Radius: 3*3*3"
-//
-// IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits
-// lines on its own when needed, and the colors are not ment to be changed!
-//
-// That's all have "fun" translating!
-
 {
-//	 Item Groups
+"_comment": [
+	"Notes for translators, please read before starting.",
+
+	"If you read this thank you for considering localising Pandoras Creatures.",
+	"Before you start consider messaging me (mod author) or one of my Discord moderators,",
+	"so you can get the Translator Role and have acces to the newest lang file.",
+	"This lang file will often have localisations for the next version of the mod,",
+	"that contains content that has not been released yet.",
+	
+	"When the localisation file is done send it to me, preferably in the discord channel made",
+	"for it, or by sending me a direct message.",
+	
+	"If you want a name other then your Discord name to be inside the credits, let me know.",
+	
+						  "<#########> Localising Tools <#########>",
+	
+	"By putting \n in the text the mod will split the text at that position, when spliting text",
+	"keep in mind that you have to add a color code again, if you used one in the line before",
+	"(see color codes bellow), as its a new line and the color will reset itself to default.",
+	
+	"The following color codes can be added to the start of text to color it:",
+	
+	" #c0 Black",
+	" #c1 Dark Blue",
+	" #c2 Dark Green",
+	" #c3 Dark Aqua",
+	" #c4 Dark Red",
+	" #c5 Dark Purple",
+	" #c6 Gold",
+	" #c7 Gray",
+	" #c8 Dark Gray",
+	" #c9 Blue",
+	" #ca Green",
+	" #cb Aqua",
+	" #cc Red",
+	" #cd Light Purple",
+	" #ce Yellow",
+	" #cf White",
+	
+	"The following color codes can be added to the start of text to apply some effects:",
+	
+	" #cl Bold",
+	" #cm Strikethrough",
+	" #cn Underline",
+	" #co Italic",
+	" #cr Reset the default color",
+	
+	"Feel free to add or remove new lines, in order to make the text look good in the language youre working on.",
+	"You should use a text editor that has JSON formating in order to avoid invalid files.",
+	"The text %s will be replace with text. Example: \"Author: %s\" could become \"Author: andrew0030\".",
+	"The text %d will be replace with a number. Example: \"Radius: %d*%d*%d\" could become \"Radius: 3*3*3\"",
+	
+	"IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits",
+	"lines on its own when needed, and the colors are not ment to be changed!",
+	
+	"That's all have \"fun\" translating!"],
+		
+"_comment1": "Item Groups",
 	"itemGroup.pandoras_creatures": "Τα Τέρατα της Πανδώρας",
 
-//	 Spawn Eggs
+"_comment2": "Spawn Eggs",
 	"item.pandoras_creatures.arachnon_spawn_egg": "Spawn αυγό αράχνον",
 	"item.pandoras_creatures.hellhound_spawn_egg": "Spawn αυγό λύκων της Κόλασης",
 	"item.pandoras_creatures.crab_spawn_egg": "Spawn αυγό καβούρια",
@@ -67,15 +68,15 @@
 	"item.pandoras_creatures.bufflon_spawn_egg": "Spawn αυγό βούβαλων",
 	"item.pandoras_creatures.end_troll_spawn_egg": "Spawn αυγό τρωγλοδύτων του End",
 	
-//	 Item Tooltips, [Localising Tools] can be used here.
+"_comment3": "Item Tooltips, [Localising Tools] can be used here",
 	"item.pandoras_creatures.acidic_archvine_spawn_egg.tooltip": "#c7Πρέπει να τοποθετηθεί κάτω από\n#c7Φύλλα ζούγκλας ή πέτρα του Νέδερ",
 	"item.pandoras_creatures.arachnon_hammer.tooltip": "#c7Αυτό το εργαλείο σπάει\n#c7κουτιά σε περιοχή 3x3",
 	"item.pandoras_creatures.plant_hat.tooltip": "#c7Όταν φοράτε αυτό το καπέλο\n#c7δεν μπορούν να σας ειδοποιήσουν\n#c7οι δαιμονικές κλιματσίδες",
 	
-//	 Block Tooltips, [Localising Tools] can be used here.
+"_comment4": "Block Tooltips, [Localising Tools] can be used here",
 	"block.pandoras_creatures.end_troll_box.tooltip": "και %d περισσότερα...",
 	
-//	 Items
+"_comment5": "Items",
 	"item.pandoras_creatures.arachnon_hammer": "Σφυρί του αράχνον",
 	"item.pandoras_creatures.crab_meat": "Kρέας καβουριών",
 	"item.pandoras_creatures.crab_meat_cooked": "Μαγειρεμένο κρέας καβουριών",
@@ -95,7 +96,7 @@
 	"item.pandoras_creatures.plant_hat": "Καπέλο με φύλλα",
 	"item.pandoras_creatures.end_troll_skin": "Δέρμα του τρωγλοδύτη του End",
 	
-//	 Blocks
+"_comment6": "Blocks",
 	"block.pandoras_creatures.arachnon_crystal": "Kρύσταλλος του αράχνον",
 	"block.pandoras_creatures.horsetail": "Aλογοουρά",
 	"block.pandoras_creatures.dhania": "Κορίανδρο",
@@ -118,7 +119,7 @@
 	"block.pandoras_creatures.red_end_troll_box": "Κόκκινο κουτί του τρωγλοδύτη του End",
 	"block.pandoras_creatures.black_end_troll_box": "Μαύρο κουτί του τρωγλοδύτη του End",
 	
-//	 Entities
+"_comment7": "Entities",
 	"entity.pandoras_creatures.arachnon": "Αράχνον",
 	"entity.pandoras_creatures.hellhound": "Λύκος της Κόλασης",
 	"entity.pandoras_creatures.crab": "Καβούρι",
@@ -130,10 +131,10 @@
 	"entity.pandoras_creatures.end_troll_bullet_wither": "Γουίδερ σφαίρα του τρωγλοδύτη του End",
 	"entity.pandoras_creatures.end_troll_bullet_damage": "Σφαίρα του τρωγλοδύτη του End",
 	
-//	 Containers
+"_comment8": "Containers",
 	 "container.pandoras_creatures.end_troll_box": "Κουτί του τρωγλοδύτη του End",
 	
-//	 Button Tool Tips
+"_comment9": "Button Tool Tips",
 	"gui.button.pandoras_creatures.discord": "Discord",
 	"gui.button.pandoras_creatures.curseforge": "CurseForge",
 	"gui.button.pandoras_creatures.youtube": "YouTube",
@@ -145,7 +146,7 @@
 	"gui.button.pandoras_creatures.bufflon.combat": "Επιθετική Συμπεριφορά",
 	"gui.button.pandoras_creatures.bufflon.peaceful": "Ειρηνική Συμπεριφορά",
 	
-//	 Chat Messages
+"_comment10": "Chat Messages",
 	"chat.pandoras_creatures.invalidJarDownload": "[εδώ]",
 	"chat.pandoras_creatures.invalidJarDownloadTooltip": "Πατήστε για να επισκεφτείτε το επίσημο website.",
 	"chat.pandoras_creatures.invalidJarStopModReposts": "[εδώ]",
@@ -156,18 +157,18 @@
 	"chat.pandoras_creatures.newVersion": "Υπάρχει νεότερη έκδοση για το Mod Τα Τέρατα της Πανδώρας. Παρακαλώ πατήστε %s για να ανοίξετε το επίσημο website.",
 	"chat.pandoras_creatures.failedCheck": "Τα Τέρατα της Πανδώρας δεν μπόρεσε να ελέγξει αν υπάρχει νεότερη έκδοση.",
 	
-//	 Crab Types
+"_comment11": "Crab Types",
 	"chat.pandoras_creatures.crabBucketTooltip.sea": "Ωκεανό Καβούρι",
 	"chat.pandoras_creatures.crabBucketTooltip.tropical": "Τροπικό Καβούρι",
 	
-//	Seahorse Sizes
+"_comment12": "Seahorse Sizes",
 	"chat.pandoras_creatures.seahorseBucketTooltip.verySmall": "Μέγεθος: Πολύ Μικρό",
 	"chat.pandoras_creatures.seahorseBucketTooltip.small": "Μέγεθος: Μικρό",
 	"chat.pandoras_creatures.seahorseBucketTooltip.normal": "Μέγεθος: Μεσαίο",
 	"chat.pandoras_creatures.seahorseBucketTooltip.big": "Μέγεθος: Μεγάλο",
 	"chat.pandoras_creatures.seahorseBucketTooltip.veryBig": "Μέγεθος: Πολύ Μεγάλο",
 	
-// 	Seahorse Types
+"_comment13": "Seahorse Types",
 	"chat.pandoras_creatures.seahorseBucketTooltip.orange": "Πορτοκαλί Ιππόκαμπος",
 	"chat.pandoras_creatures.seahorseBucketTooltip.green": "Πράσινος Ιππόκαμπος",	
 	"chat.pandoras_creatures.seahorseBucketTooltip.red": "Κόκκινος Ιππόκαμπος",
