--- a/src/main/resources/assets/pandoras_creatures/lang/fil_ph.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/fil_ph.json
@@ -1,64 +1,65 @@
-// Notes for translators, please read before starting.
-//
-// If you read this thank you for considering localising Pandoras Creatures.
-// Before you start consider messaging me (mod author) or one of my Discord moderators,
-// so you can get the Translator Role and have acces to the newest lang file.
-// This lang file will often have localisations for the next version of the mod,
-// that contains content that has not been released yet.
-//
-// When the localisation file is done send it to me, preferably in the discord channel made
-// for it, or by sending me a direct message.
-//
-// If you want a name other then your Discord name to be inside the credits, let me know.
-//
-// 					  <#########> Localising Tools <#########>
-//
-// By putting \n in the text the mod will split the text at that position, when spliting text
-// keep in mind that you have to add a color code again, if you used one in the line before
-// (see color codes bellow), as its a new line and the color will reset itself to default.
-//
-// The following color codes can be added to the start of text to color it:
-//
-// #c0 Black
-// #c1 Dark Blue
-// #c2 Dark Green
-// #c3 Dark Aqua
-// #c4 Dark Red
-// #c5 Dark Purple
-// #c6 Gold
-// #c7 Gray
-// #c8 Dark Gray
-// #c9 Blue
-// #ca Green
-// #cb Aqua
-// #cc Red
-// #cd Light Purple
-// #ce Yellow
-// #cf White
-//
-// The following color codes can be added to the start of text to apply some effects:
-//
-// #cl Bold
-// #cm Strikethrough
-// #cn Underline
-// #co Italic
-// #cr Reset the default color
-//
-// Feel free to add or remove new lines, in order to make the text look good in the language youre working on.
-// You should use a text editor that has JSON formating in order to avoid invalid files.
-// The text %s will be replace with text. Example: "Author: %s" could become "Author: andrew0030".  
-// The text %d will be replace with a number. Example: "Radius: %d*%d*%d" could become "Radius: 3*3*3"
-//
-// IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits
-// lines on its own when needed, and the colors are not ment to be changed!
-//
-// That's all have "fun" translating!
-
 {
-//	 Item Groups
+"_comment": [
+	"Notes for translators, please read before starting.",
+
+	"If you read this thank you for considering localising Pandoras Creatures.",
+	"Before you start consider messaging me (mod author) or one of my Discord moderators,",
+	"so you can get the Translator Role and have acces to the newest lang file.",
+	"This lang file will often have localisations for the next version of the mod,",
+	"that contains content that has not been released yet.",
+	
+	"When the localisation file is done send it to me, preferably in the discord channel made",
+	"for it, or by sending me a direct message.",
+	
+	"If you want a name other then your Discord name to be inside the credits, let me know.",
+	
+						  "<#########> Localising Tools <#########>",
+	
+	"By putting \n in the text the mod will split the text at that position, when spliting text",
+	"keep in mind that you have to add a color code again, if you used one in the line before",
+	"(see color codes bellow), as its a new line and the color will reset itself to default.",
+	
+	"The following color codes can be added to the start of text to color it:",
+	
+	" #c0 Black",
+	" #c1 Dark Blue",
+	" #c2 Dark Green",
+	" #c3 Dark Aqua",
+	" #c4 Dark Red",
+	" #c5 Dark Purple",
+	" #c6 Gold",
+	" #c7 Gray",
+	" #c8 Dark Gray",
+	" #c9 Blue",
+	" #ca Green",
+	" #cb Aqua",
+	" #cc Red",
+	" #cd Light Purple",
+	" #ce Yellow",
+	" #cf White",
+	
+	"The following color codes can be added to the start of text to apply some effects:",
+	
+	" #cl Bold",
+	" #cm Strikethrough",
+	" #cn Underline",
+	" #co Italic",
+	" #cr Reset the default color",
+	
+	"Feel free to add or remove new lines, in order to make the text look good in the language youre working on.",
+	"You should use a text editor that has JSON formating in order to avoid invalid files.",
+	"The text %s will be replace with text. Example: \"Author: %s\" could become \"Author: andrew0030\".",
+	"The text %d will be replace with a number. Example: \"Radius: %d*%d*%d\" could become \"Radius: 3*3*3\"",
+	
+	"IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits",
+	"lines on its own when needed, and the colors are not ment to be changed!",
+	
+	"That's all have \"fun\" translating!"],
+		
+"_comment1": "Item Groups",
 	"itemGroup.pandoras_creatures": "Pandoras Creatures",
 
-//	 Spawn Eggs
+"_comment2": "Spawn Eggs",
 	"item.pandoras_creatures.arachnon_spawn_egg": "Panlikhaang Itlog ng Batong Gagamba",
 	"item.pandoras_creatures.hellhound_spawn_egg": "Panlikhaang Itlog ng Impiyernong Aso sa Pangangaso",
 	"item.pandoras_creatures.crab_spawn_egg": "Panlikhaang Itlog ng Alimango",
@@ -67,15 +68,15 @@
 	"item.pandoras_creatures.bufflon_spawn_egg": "Panlikhaang Itlog ng Kalabaw",
 	"item.pandoras_creatures.end_troll_spawn_egg": "Panlikhaang Itlog ng Troll ng Kawalan",
 	
-//	 Item Tooltips, [Localising Tools] can be used here.
+"_comment3": "Item Tooltips, [Localising Tools] can be used here",
 	"item.pandoras_creatures.acidic_archvine_spawn_egg.tooltip": "#c7Kailangang ilagay sa ilalim ng\n#c7Gubatang Dahon o Netherrack",
 	"item.pandoras_creatures.arachnon_hammer.tooltip": "#c7Ang kagamitang ito ay makakasira ng mga\n#c7tipak ng bloke sa lawak na 3x3",
 	"item.pandoras_creatures.plant_hat.tooltip": "#c7Kapag sinuot itong sumbrero na ito, ikaw ay\n#c7hindi makikita ng mga Asidong Archvine",
 	
-//	 Block Tooltips, [Localising Tools] can be used here.
+"_comment4": "Block Tooltips, [Localising Tools] can be used here",
 	"block.pandoras_creatures.end_troll_box.tooltip": "at %d iba pa...",
 	
-//	 Items
+"_comment5": "Items",
 	"item.pandoras_creatures.arachnon_hammer": "Martilyong yari sa Batong Gagamba",
 	"item.pandoras_creatures.crab_meat": "Laman ng Alimango",
 	"item.pandoras_creatures.crab_meat_cooked": "Nilutong Laman ng Alimango",
@@ -95,7 +96,7 @@
 	"item.pandoras_creatures.plant_hat": "Sumbrerong yari sa Halaman",
 	"item.pandoras_creatures.end_troll_skin": "Balat ng Troll ng Kawalan",
 	
-//	 Blocks
+"_comment6": "Blocks",
 	"block.pandoras_creatures.arachnon_crystal": "Kristal ng Batong Gagamba",
 	"block.pandoras_creatures.horsetail": "Buntot Kabayo",
 	"block.pandoras_creatures.dhania": "Perehil",
@@ -118,7 +119,7 @@
 	"block.pandoras_creatures.red_end_troll_box": "Pulang Kaha na yari sa Troll ng Kawalan",
 	"block.pandoras_creatures.black_end_troll_box": "itim na Kaha na yari sa Troll ng Kawalan",
 	
-//	 Entities
+"_comment7": "Entities",
 	"entity.pandoras_creatures.arachnon": "Batong Gagamba",
 	"entity.pandoras_creatures.hellhound": "Impiyernong Aso sa Pangangaso",
 	"entity.pandoras_creatures.crab": "Alimango",
@@ -130,10 +131,10 @@
 	"entity.pandoras_creatures.end_troll_bullet_wither": "Balang Panglanta na yari sa Troll ng Kawalan",
 	"entity.pandoras_creatures.end_troll_bullet_damage": "Balang Paminsala na yari sa Troll ng Kawalan",
 	
-//	 Containers
+"_comment8": "Containers",
 	 "container.pandoras_creatures.end_troll_box": "Kaha na yari sa Troll ng Kawalan",
 	
-//	 Button Tool Tips
+"_comment9": "Button Tool Tips",
 	"gui.button.pandoras_creatures.discord": "Discord",
 	"gui.button.pandoras_creatures.curseforge": "CurseForge",
 	"gui.button.pandoras_creatures.youtube": "YouTube",
@@ -145,7 +146,7 @@
 	"gui.button.pandoras_creatures.bufflon.combat": "Payapang Ayos",
 	"gui.button.pandoras_creatures.bufflon.peaceful": "Payapang Ayos",
 	
-//	 Chat Messages
+"_comment10": "Chat Messages",
 	"chat.pandoras_creatures.invalidJarDownload": "[dito]",
 	"chat.pandoras_creatures.invalidJarDownloadTooltip": "Pindutin upang mabuksan ang pahina ng pag-download.",
 	"chat.pandoras_creatures.invalidJarStopModReposts": "[dito]",
@@ -156,18 +157,18 @@
 	"chat.pandoras_creatures.newVersion": "Mayroong bagong bersyon ng Mga Nilalang ng Pandora. Maaaring pindutin ang %s upang mabuksan ang pahina ng pag-download.",
 	"chat.pandoras_creatures.failedCheck": "Ang Mga Nilalang ng Pandora ay hindi kinayang magsuri ng mga bagong bersyon.",
 	
-//	 Crab Types
+"_comment11": "Crab Types",
 	"chat.pandoras_creatures.crabBucketTooltip.sea": "Alimango ng Dagat",
 	"chat.pandoras_creatures.crabBucketTooltip.tropical": "Tropikal na Alimango",
 	
-//	Seahorse Sizes
+"_comment12": "Seahorse Sizes",
 	"chat.pandoras_creatures.seahorseBucketTooltip.verySmall": "Laki: Napakaliit",
 	"chat.pandoras_creatures.seahorseBucketTooltip.small": "Laki:Maliit",
 	"chat.pandoras_creatures.seahorseBucketTooltip.normal": "Laki: Pangkaraniwan",
 	"chat.pandoras_creatures.seahorseBucketTooltip.big": "Laki: Malaki",
 	"chat.pandoras_creatures.seahorseBucketTooltip.veryBig": "Laki: Napakalaki",
 	
-// 	Seahorse Types
+"_comment13": "Seahorse Types",
 	"chat.pandoras_creatures.seahorseBucketTooltip.orange": "Kahel na Dagum-dagum",
 	"chat.pandoras_creatures.seahorseBucketTooltip.green": "Luntiang Dagum-dagum",	
 	"chat.pandoras_creatures.seahorseBucketTooltip.red": "Pulang Dagum-dagum",
