--- a/src/main/resources/assets/pandoras_creatures/lang/nl_nl.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/nl_nl.json
@@ -1,64 +1,65 @@
-// Notes for translators, please read before starting.
-//
-// If you read this thank you for considering localising Pandoras Creatures.
-// Before you start consider messaging me (mod author) or one of my Discord moderators,
-// so you can get the Translator Role and have acces to the newest lang file.
-// This lang file will often have localisations for the next version of the mod,
-// that contains content that has not been released yet.
-//
-// When the localisation file is done send it to me, preferably in the discord channel made
-// for it, or by sending me a direct message.
-//
-// If you want a name other then your Discord name to be inside the credits, let me know.
-//
-// 					  <#########> Localising Tools <#########>
-//
-// By putting \n in the text the mod will split the text at that position, when spliting text
-// keep in mind that you have to add a color code again, if you used one in the line before
-// (see color codes bellow), as its a new line and the color will reset itself to default.
-//
-// The following color codes can be added to the start of text to color it:
-//
-// #c0 Black
-// #c1 Dark Blue
-// #c2 Dark Green
-// #c3 Dark Aqua
-// #c4 Dark Red
-// #c5 Dark Purple
-// #c6 Gold
-// #c7 Gray
-// #c8 Dark Gray
-// #c9 Blue
-// #ca Green
-// #cb Aqua
-// #cc Red
-// #cd Light Purple
-// #ce Yellow
-// #cf White
-//
-// The following color codes can be added to the start of text to apply some effects:
-//
-// #cl Bold
-// #cm Strikethrough
-// #cn Underline
-// #co Italic
-// #cr Reset the default color
-//
-// Feel free to add or remove new lines, in order to make the text look good in the language youre working on.
-// You should use a text editor that has JSON formating in order to avoid invalid files.
-// The text %s will be replace with text. Example: "Author: %s" could become "Author: andrew0030".  
-// The text %d will be replace with a number. Example: "Radius: %d*%d*%d" could become "Radius: 3*3*3"
-//
-// IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits
-// lines on its own when needed, and the colors are not ment to be changed!
-//
-// That's all have "fun" translating!
-
 {
-//	 Item Groups
+"_comment": [
+	"Notes for translators, please read before starting.",
+
+	"If you read this thank you for considering localising Pandoras Creatures.",
+	"Before you start consider messaging me (mod author) or one of my Discord moderators,",
+	"so you can get the Translator Role and have acces to the newest lang file.",
+	"This lang file will often have localisations for the next version of the mod,",
+	"that contains content that has not been released yet.",
+	
+	"When the localisation file is done send it to me, preferably in the discord channel made",
+	"for it, or by sending me a direct message.",
+	
+	"If you want a name other then your Discord name to be inside the credits, let me know.",
+	
+						  "<#########> Localising Tools <#########>",
+	
+	"By putting \n in the text the mod will split the text at that position, when spliting text",
+	"keep in mind that you have to add a color code again, if you used one in the line before",
+	"(see color codes bellow), as its a new line and the color will reset itself to default.",
+	
+	"The following color codes can be added to the start of text to color it:",
+	
+	" #c0 Black",
+	" #c1 Dark Blue",
+	" #c2 Dark Green",
+	" #c3 Dark Aqua",
+	" #c4 Dark Red",
+	" #c5 Dark Purple",
+	" #c6 Gold",
+	" #c7 Gray",
+	" #c8 Dark Gray",
+	" #c9 Blue",
+	" #ca Green",
+	" #cb Aqua",
+	" #cc Red",
+	" #cd Light Purple",
+	" #ce Yellow",
+	" #cf White",
+	
+	"The following color codes can be added to the start of text to apply some effects:",
+	
+	" #cl Bold",
+	" #cm Strikethrough",
+	" #cn Underline",
+	" #co Italic",
+	" #cr Reset the default color",
+	
+	"Feel free to add or remove new lines, in order to make the text look good in the language youre working on.",
+	"You should use a text editor that has JSON formating in order to avoid invalid files.",
+	"The text %s will be replace with text. Example: \"Author: %s\" could become \"Author: andrew0030\".",
+	"The text %d will be replace with a number. Example: \"Radius: %d*%d*%d\" could become \"Radius: 3*3*3\"",
+	
+	"IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits",
+	"lines on its own when needed, and the colors are not ment to be changed!",
+	
+	"That's all have \"fun\" translating!"],
+		
+"_comment1": "Item Groups",
 	"itemGroup.pandoras_creatures": "Pandora's Schepsels",
 
-//	 Spawn Eggs
+"_comment2": "Spawn Eggs",
 	"item.pandoras_creatures.arachnon_spawn_egg": "Arachnonspawnei",
 	"item.pandoras_creatures.hellhound_spawn_egg": "Hellehondspawnei",
 	"item.pandoras_creatures.crab_spawn_egg": "Krabspawnei",
@@ -67,15 +68,15 @@
 	"item.pandoras_creatures.bufflon_spawn_egg": "Bufflonspawnei",
 	"item.pandoras_creatures.end_troll_spawn_egg": "end Trolspawnei",
 	
-//	 Item Tooltips, [Localising Tools] can be used here.
+"_comment3": "Item Tooltips, [Localising Tools] can be used here",
 	"item.pandoras_creatures.acidic_archvine_spawn_egg.tooltip": "#c7Moet worden geplaatst onder\n#c7Jungle Bladeren of Netherrack",
 	"item.pandoras_creatures.arachnon_hammer.tooltip": "#c7Dit gereedschap breekt\n#c7blokken in een straal van 3x3",
 	"item.pandoras_creatures.plant_hat.tooltip": "#c7Wanneer je dit draagt\n#c7ben je onzichtbaar\n#c7voor de zure Archvine",
 
-//	 Block Tooltips, [Localising Tools] can be used here.
+"_comment4": "Block Tooltips, [Localising Tools] can be used here",
 	"block.pandoras_creatures.end_troll_box.tooltip": "en %d meer...",
 
-//	 Items
+"_comment5": "Items",
 	"item.pandoras_creatures.arachnon_hammer": "Arachnon Hamer",
 	"item.pandoras_creatures.crab_meat": "Krabvlees",
 	"item.pandoras_creatures.crab_meat_cooked": "Gekookt Krabvlees",
@@ -95,7 +96,7 @@
 	"item.pandoras_creatures.plant_hat": "Planten Hoed",
 	"item.pandoras_creatures.end_troll_skin": "End Trol Huid",
 	
-//	 Blocks
+"_comment6": "Blocks",
 	"block.pandoras_creatures.arachnon_crystal": "Arachnon Kristal",
 	"block.pandoras_creatures.horsetail": "Paardenstaart",
 	"block.pandoras_creatures.dhania": "Koriander",
@@ -118,7 +119,7 @@
 	"block.pandoras_creatures.red_end_troll_box": "Rode End Trol Doos",
 	"block.pandoras_creatures.black_end_troll_box": "Zwarte End Trol Doos",
 	
-//	 Entities
+"_comment7": "Entities",
 	"entity.pandoras_creatures.arachnon": "Arachnon",
 	"entity.pandoras_creatures.hellhound": "Hellehond",
 	"entity.pandoras_creatures.crab": "Krab",
@@ -130,10 +131,10 @@
 	"entity.pandoras_creatures.end_troll_bullet_wither": "Verdorrende End Trol Kogel",
 	"entity.pandoras_creatures.end_troll_bullet_damage": "Schadelijke End Troll Kogel",
 
-//	 Containers
+"_comment8": "Containers",
 	 "container.pandoras_creatures.end_troll_box": "End Trol Doos",
 	
-//	 Button Tool Tips
+"_comment9": "Button Tool Tips",
 	"gui.button.pandoras_creatures.discord": "Discord",
 	"gui.button.pandoras_creatures.curseforge": "CurseForge",
 	"gui.button.pandoras_creatures.youtube": "YouTube",
@@ -145,7 +146,7 @@
 	"gui.button.pandoras_creatures.bufflon.combat": "Aanvals Modus",
 	"gui.button.pandoras_creatures.bufflon.peaceful": "Vredige Modus",
 	
-//	 Chat Messages
+"_comment10": "Chat Messages",
 	"chat.pandoras_creatures.invalidJarDownload": "[hier]",
 	"chat.pandoras_creatures.invalidJarDownloadTooltip": "Klik om de downloadpagina te openen.",
 	"chat.pandoras_creatures.invalidJarStopModReposts": "[hier]",
@@ -156,18 +157,18 @@
 	"chat.pandoras_creatures.newVersion": "Er is een nieuwe versie van Pandora's Wezens verkrijgbaar. Klik alstublieft %s om de officiele downloadpagina te openen.",
 	"chat.pandoras_creatures.failedCheck": "Pandora's Wezens was niet in staat om nieuwe versies te controlen.",
 	
-//	 Crab Types
+"_comment11": "Crab Types",
 	"chat.pandoras_creatures.crabBucketTooltip.sea": "Zee Krab",
 	"chat.pandoras_creatures.crabBucketTooltip.tropical": "Tropische krab",
 	
-//	Seahorse Sizes
+"_comment12": "Seahorse Sizes",
 	"chat.pandoras_creatures.seahorseBucketTooltip.verySmall": "Omvang: Erg Klein",
 	"chat.pandoras_creatures.seahorseBucketTooltip.small": "Omvang: Klein",
 	"chat.pandoras_creatures.seahorseBucketTooltip.normal": "Omvang: Normaal",
 	"chat.pandoras_creatures.seahorseBucketTooltip.big": "Omvang: Groot",
 	"chat.pandoras_creatures.seahorseBucketTooltip.veryBig": "Omvang: Erg Groot",
 	
-// 	Seahorse Types
+"_comment13": "Seahorse Types",
 	"chat.pandoras_creatures.seahorseBucketTooltip.orange": "Oranje Zeepaardje",
 	"chat.pandoras_creatures.seahorseBucketTooltip.green": "Groen Zeepaardje",	
 	"chat.pandoras_creatures.seahorseBucketTooltip.red": "Rood Zeepaardje",
