--- a/src/main/resources/assets/pandoras_creatures/lang/pt_br.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/pt_br.json
@@ -1,64 +1,65 @@
-// Notes for translators, please read before starting.
-//
-// If you read this thank you for considering localising Pandoras Creatures.
-// Before you start consider messaging me (mod author) or one of my Discord moderators,
-// so you can get the Translator Role and have acces to the newest lang file.
-// This lang file will often have localisations for the next version of the mod,
-// that contains content that has not been released yet.
-//
-// When the localisation file is done send it to me, preferably in the discord channel made
-// for it, or by sending me a direct message.
-//
-// If you want a name other then your Discord name to be inside the credits, let me know.
-//
-// 					  <#########> Localising Tools <#########>
-//
-// By putting \n in the text the mod will split the text at that position, when spliting text
-// keep in mind that you have to add a color code again, if you used one in the line before
-// (see color codes bellow), as its a new line and the color will reset itself to default.
-//
-// The following color codes can be added to the start of text to color it:
-//
-// #c0 Black
-// #c1 Dark Blue
-// #c2 Dark Green
-// #c3 Dark Aqua
-// #c4 Dark Red
-// #c5 Dark Purple
-// #c6 Gold
-// #c7 Gray
-// #c8 Dark Gray
-// #c9 Blue
-// #ca Green
-// #cb Aqua
-// #cc Red
-// #cd Light Purple
-// #ce Yellow
-// #cf White
-//
-// The following color codes can be added to the start of text to apply some effects:
-//
-// #cl Bold
-// #cm Strikethrough
-// #cn Underline
-// #co Italic
-// #cr Reset the default color
-//
-// Feel free to add or remove new lines, in order to make the text look good in the language youre working on.
-// You should use a text editor that has JSON formating in order to avoid invalid files.
-// The text %s will be replace with text. Example: "Author: %s" could become "Author: andrew0030".  
-// The text %d will be replace with a number. Example: "Radius: %d*%d*%d" could become "Radius: 3*3*3"
-//
-// IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits
-// lines on its own when needed, and the colors are not ment to be changed!
-//
-// That's all have "fun" translating!
-
 {
-//	 Item Groups
+"_comment": [
+	"Notes for translators, please read before starting.",
+
+	"If you read this thank you for considering localising Pandoras Creatures.",
+	"Before you start consider messaging me (mod author) or one of my Discord moderators,",
+	"so you can get the Translator Role and have acces to the newest lang file.",
+	"This lang file will often have localisations for the next version of the mod,",
+	"that contains content that has not been released yet.",
+	
+	"When the localisation file is done send it to me, preferably in the discord channel made",
+	"for it, or by sending me a direct message.",
+	
+	"If you want a name other then your Discord name to be inside the credits, let me know.",
+	
+						  "<#########> Localising Tools <#########>",
+	
+	"By putting \n in the text the mod will split the text at that position, when spliting text",
+	"keep in mind that you have to add a color code again, if you used one in the line before",
+	"(see color codes bellow), as its a new line and the color will reset itself to default.",
+	
+	"The following color codes can be added to the start of text to color it:",
+	
+	" #c0 Black",
+	" #c1 Dark Blue",
+	" #c2 Dark Green",
+	" #c3 Dark Aqua",
+	" #c4 Dark Red",
+	" #c5 Dark Purple",
+	" #c6 Gold",
+	" #c7 Gray",
+	" #c8 Dark Gray",
+	" #c9 Blue",
+	" #ca Green",
+	" #cb Aqua",
+	" #cc Red",
+	" #cd Light Purple",
+	" #ce Yellow",
+	" #cf White",
+	
+	"The following color codes can be added to the start of text to apply some effects:",
+	
+	" #cl Bold",
+	" #cm Strikethrough",
+	" #cn Underline",
+	" #co Italic",
+	" #cr Reset the default color",
+	
+	"Feel free to add or remove new lines, in order to make the text look good in the language youre working on.",
+	"You should use a text editor that has JSON formating in order to avoid invalid files.",
+	"The text %s will be replace with text. Example: \"Author: %s\" could become \"Author: andrew0030\".",
+	"The text %d will be replace with a number. Example: \"Radius: %d*%d*%d\" could become \"Radius: 3*3*3\"",
+	
+	"IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits",
+	"lines on its own when needed, and the colors are not ment to be changed!",
+	
+	"That's all have \"fun\" translating!"],
+		
+"_comment1": "Item Groups",
 	"itemGroup.pandoras_creatures": "Criaturas de Pandora",
 
-//	 Spawn Eggs
+"_comment2": "Spawn Eggs",
 	"item.pandoras_creatures.arachnon_spawn_egg": "Ovo gerador de aracnón",
 	"item.pandoras_creatures.hellhound_spawn_egg": "Ovo gerador de cão infernal",
 	"item.pandoras_creatures.crab_spawn_egg": "Ovo gerador de caranguejo",
@@ -66,11 +67,11 @@
 	"item.pandoras_creatures.acidic_archvine_spawn_egg": "Ovo gerador de vinha-agarradora ácida",
 	"item.pandoras_creatures.bufflon_spawn_egg": "Ovo gerador de bufão",
 	
-//	 Item Tooltips, [Localising Tools] can be used here.
+"_comment3": "Item Tooltips, [Localising Tools] can be used here",
 	"item.pandoras_creatures.acidic_archvine_spawn_egg.tooltip": "#c7Precisa ser colocada embaixo de\n#c7folhas da selva ou netherrack",
 	"item.pandoras_creatures.arachnon_hammer.tooltip": "#c7Essa ferramenta irá quebrar\n#c7blocos em uma raio de 3x3",
 	
-//	 Items
+"_comment5": "Items",
 	"item.pandoras_creatures.arachnon_hammer": "Martelo do aracnón",
 	"item.pandoras_creatures.crab_meat": "Carne de caranguejo crua",
 	"item.pandoras_creatures.crab_meat_cooked": "Carne de caranguejo cozida",
@@ -88,13 +89,13 @@
 	"item.pandoras_creatures.bufflon_small_storage": "Suporte de carga pequeno para bufão",
 	"item.pandoras_creatures.bufflon_large_storage": "Suporte de carga largo para bufão",
 	
-//	 Blocks
+"_comment6": "Blocks",
 	"block.pandoras_creatures.arachnon_crystal": "Cristal do aracnón",
 	"block.pandoras_creatures.horsetail": "Cavalinha",
 	"block.pandoras_creatures.dhania": "Coentro",
 	"block.pandoras_creatures.hill_bloom": "Flor da montanha",
 	
-//	 Entities
+"_comment7": "Entities",
 	"entity.pandoras_creatures.arachnon": "Aracnón",
 	"entity.pandoras_creatures.hellhound": "Cão infernal",
 	"entity.pandoras_creatures.crab": "Caranguejo",
@@ -102,7 +103,7 @@
 	"entity.pandoras_creatures.acidic_archvine": "Vinha-agarradora ácida",
 	"entity.pandoras_creatures.bufflon": "Bufão",
 	
-//	 Button Tool Tips
+"_comment9": "Button Tool Tips",
 	"gui.button.pandoras_creatures.discord": "Discord",
 	"gui.button.pandoras_creatures.curseforge": "CurseForge",
 	"gui.button.pandoras_creatures.youtube": "YouTube",
@@ -114,7 +115,7 @@
 	"gui.button.pandoras_creatures.bufflon.combat": "Modo de combate",
 	"gui.button.pandoras_creatures.bufflon.peaceful": "Modo pacífico",
 	
-//	 Chat Messages
+"_comment10": "Chat Messages",
 	"chat.pandoras_creatures.invalidJarDownload": "[aqui]",
 	"chat.pandoras_creatures.invalidJarDownloadTooltip": "Clique para abrir a página de downloads.",
 	"chat.pandoras_creatures.invalidJarStopModReposts": "[aqui]",
@@ -125,18 +126,18 @@
 	"chat.pandoras_creatures.newVersion": "Há uma nova versão do Criaturas de Pandora disponível. Por favor clique %s para abrir a página oficial de downloads.",
 	"chat.pandoras_creatures.failedCheck": "O Criaturas de Pandora não conseguiu verificar se existem novas versões.",
 	
-//	 Crab Types
+"_comment11": "Crab Types",
 	"chat.pandoras_creatures.crabBucketTooltip.sea": "Caranguejo marinho",
 	"chat.pandoras_creatures.crabBucketTooltip.tropical": "Caranguejo tropical",
 	
-//	Seahorse Sizes
+"_comment12": "Seahorse Sizes",
 	"chat.pandoras_creatures.seahorseBucketTooltip.verySmall": "Tamanho: Muito pequeno",
 	"chat.pandoras_creatures.seahorseBucketTooltip.small": "Tamanho: Pequeno",
 	"chat.pandoras_creatures.seahorseBucketTooltip.normal": "Tamanho: Normal",
 	"chat.pandoras_creatures.seahorseBucketTooltip.big": "Tamanho: Grande",
 	"chat.pandoras_creatures.seahorseBucketTooltip.veryBig": "Tamanho: Muito grande",
 	
-// 	Seahorse Types
+"_comment13": "Seahorse Types",
 	"chat.pandoras_creatures.seahorseBucketTooltip.orange": "Cavalo-marinho laranja",
 	"chat.pandoras_creatures.seahorseBucketTooltip.green": "Cavalo-marinho verde",	
 	"chat.pandoras_creatures.seahorseBucketTooltip.red": "Cavalo-marinho vermelho",
