Kinda added the mysterious object and code improvements.
- Added a decent portion of code for the new mysterious object
- Changed some code in the BiomeLoadEvent because one of the TinkersConstruct devs pointed out the list wasnt immutable
- Reduced some code inside the BiomeAdditionsClass

--- a/src/main/resources/assets/pandoras_creatures/lang/en_us.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/en_us.json
@@ -63,6 +63,7 @@
 	"block.pandoras_creatures.green_end_troll_box": "Green End Troll Box",
 	"block.pandoras_creatures.red_end_troll_box": "Red End Troll Box",
 	"block.pandoras_creatures.black_end_troll_box": "Black End Troll Box",
+	"block.pandoras_creatures.pandoric_shard": "Pandoric Shard",
 	
 "_comment7": "Entities",
 	"entity.pandoras_creatures.arachnon": "Arachnon",
