--- a/src/main/resources/assets/pandoras_creatures/lang/pt_br.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/pt_br.json
@@ -5,19 +5,24 @@
 	"itemGroup.pandoras_creatures": "Criaturas de Pandora",
 
 "_comment2": "Spawn Eggs",
-	"item.pandoras_creatures.arachnon_spawn_egg": "Ovo gerador de aracnón",
+	"item.pandoras_creatures.arachnon_spawn_egg": "Ovo gerador de aracnão",
 	"item.pandoras_creatures.hellhound_spawn_egg": "Ovo gerador de cão infernal",
 	"item.pandoras_creatures.crab_spawn_egg": "Ovo gerador de caranguejo",
 	"item.pandoras_creatures.seahorse_spawn_egg": "Ovo gerador de cavalo-marinho",
 	"item.pandoras_creatures.acidic_archvine_spawn_egg": "Ovo gerador de vinha-agarradora ácida",
 	"item.pandoras_creatures.bufflon_spawn_egg": "Ovo gerador de bufão",
+	"item.pandoras_creatures.end_troll_spawn_egg": "Ovo gerador de troll do End",
 	
 "_comment3": "Item Tooltips, [Localising Tools] can be used here",
 	"item.pandoras_creatures.acidic_archvine_spawn_egg.tooltip": "#c7Precisa ser colocada embaixo de\n#c7folhas da selva ou netherrack",
 	"item.pandoras_creatures.arachnon_hammer.tooltip": "#c7Essa ferramenta irá quebrar\n#c7blocos em uma raio de 3x3",
+	"item.pandoras_creatures.plant_hat.tooltip": "#c7Usar esse chapéu deixa você invisível\n#c7para as vinhas-agarradoras ácidas",
+	
+"_comment4": "Block Tooltips, [Localising Tools] can be used here",
+	"block.pandoras_creatures.end_troll_box.tooltip": "e %d mais...",
 	
 "_comment5": "Items",
-	"item.pandoras_creatures.arachnon_hammer": "Martelo do aracnón",
+	"item.pandoras_creatures.arachnon_hammer": "Martelo do aracnão",
 	"item.pandoras_creatures.crab_meat": "Carne de caranguejo crua",
 	"item.pandoras_creatures.crab_meat_cooked": "Carne de caranguejo cozida",
 	"item.pandoras_creatures.crab_bucket": "Balde com caranguejo",
@@ -33,20 +38,46 @@
 	"item.pandoras_creatures.bufflon_player_seats": "Acento de jogador para bufão",
 	"item.pandoras_creatures.bufflon_small_storage": "Suporte de carga pequeno para bufão",
 	"item.pandoras_creatures.bufflon_large_storage": "Suporte de carga largo para bufão",
+	"item.pandoras_creatures.plant_hat": "Chapéu de planta",
+	"item.pandoras_creatures.end_troll_skin": "Pele de troll do End",
 	
 "_comment6": "Blocks",
-	"block.pandoras_creatures.arachnon_crystal": "Cristal do aracnón",
+	"block.pandoras_creatures.arachnon_crystal": "Cristal do aracnão",
 	"block.pandoras_creatures.horsetail": "Cavalinha",
 	"block.pandoras_creatures.dhania": "Coentro",
 	"block.pandoras_creatures.hill_bloom": "Flor da montanha",
+	"block.pandoras_creatures.end_troll_box": "Caixa de troll do End",
+	"block.pandoras_creatures.white_end_troll_box": "Caixa de troll do End branca",
+	"block.pandoras_creatures.orange_end_troll_box": "Caixa de troll do End laranja",
+	"block.pandoras_creatures.magenta_end_troll_box": "Caixa de troll do End magenta",
+	"block.pandoras_creatures.light_blue_end_troll_box": "Caixa de troll do End azul-clara",
+	"block.pandoras_creatures.yellow_end_troll_box": "Caixa de troll do End amarela",
+	"block.pandoras_creatures.lime_end_troll_box": "Caixa de troll do End verde-limão",
+	"block.pandoras_creatures.pink_end_troll_box": "Caixa de troll do End rosa",
+	"block.pandoras_creatures.gray_end_troll_box": "Caixa de troll do End cinza",
+	"block.pandoras_creatures.light_gray_end_troll_box": "Caixa de troll do End cinza-clara",
+	"block.pandoras_creatures.cyan_end_troll_box": "Caixa de troll do End ciano",
+	"block.pandoras_creatures.purple_end_troll_box": "Caixa de troll do End roxa",
+	"block.pandoras_creatures.blue_end_troll_box": "Caixa de troll do End azul",
+	"block.pandoras_creatures.brown_end_troll_box": "Caixa de troll do End marrom",
+	"block.pandoras_creatures.green_end_troll_box": "Caixa de troll do End verde",
+	"block.pandoras_creatures.red_end_troll_box": "Caixa de troll do End vermelha",
+	"block.pandoras_creatures.black_end_troll_box": "Caixa de troll do End preta",
 	
 "_comment7": "Entities",
-	"entity.pandoras_creatures.arachnon": "Aracnón",
+	"entity.pandoras_creatures.arachnon": "Aracnão",
 	"entity.pandoras_creatures.hellhound": "Cão infernal",
 	"entity.pandoras_creatures.crab": "Caranguejo",
 	"entity.pandoras_creatures.seahorse": "Cavalo-marinho",
 	"entity.pandoras_creatures.acidic_archvine": "Vinha-agarradora ácida",
 	"entity.pandoras_creatures.bufflon": "Bufão",
+	"entity.pandoras_creatures.end_troll": "Troll do End",
+	"entity.pandoras_creatures.end_troll_bullet_poison": "Projétil venenoso do troll do end",
+	"entity.pandoras_creatures.end_troll_bullet_wither": "Projétil decompositor do troll do end",
+	"entity.pandoras_creatures.end_troll_bullet_damage": "Projétil danoso do troll do end",
+	
+"_comment8": "Containers",
+	 "container.pandoras_creatures.end_troll_box": "Caixa de troll do End",
 	
 "_comment9": "Button Tool Tips",
 	"gui.button.pandoras_creatures.discord": "Discord",
